src/render/snapshots/webgit__render__snapshot__tests__bundle_html.snap
---
source: src/render/snapshot.rs
expression: "render_ready(\"webgit-v1.0.0.bundle\", SnapshotFormat::Bundle, 918_244, 13658,\n\"blob:fake\")"
---
<div class="snapshot">
<p class="snapshot-info">webgit-v1.0.0.bundle — 13658 objects, 896 KB</p>
<p class="msg">The download should have started. If it didn't, <a href="blob:fake" download="webgit-v1.0.0.bundle" class="snapshot-download">save it here</a>.</p>
</div>
