src/render/snapshots/webgit__render__snapshot__tests__bundle_html_single_object.snap
---
source: src/render/snapshot.rs
expression: "render_ready(\"webgit-v1.0.0.bundle\", SnapshotFormat::Bundle, 212, 1,\n\"blob:fake\")"
---
<div class="snapshot">
<p class="snapshot-info">webgit-v1.0.0.bundle — 1 object, 212 B</p>
<p class="msg">The download should have started. If it didn't, <a href="blob:fake" download="webgit-v1.0.0.bundle" class="snapshot-download">save it here</a>.</p>
</div>
