src/render/snapshots/webgit__render__snapshot__tests__bundle_html_writing.snap
---
source: src/render/snapshot.rs
expression: "render_state(\"webgit-v1.0.0.bundle\", SnapshotFormat::Bundle, ||\nSnapshotState::Writing { written: 4096, total: 13658, })"
---
<div class="snapshot">
<p class="snapshot-info">webgit-v1.0.0.bundle — writing objects… 4096/13658</p>
<progress max="13658" value="4096" class="snapshot-progress">4096/13658</progress>
</div>
