src/render/snapshots/webgit__render__snapshot__tests__snapshot_html_building.snap
---
source: src/render/snapshot.rs
expression: "render_building(37, 120)"
---
<div class="snapshot">
<p class="snapshot-info">webgit-main.tar.gz — fetching objects… 37/120</p>
<progress max="120" value="37" class="snapshot-progress">37/120</progress>
</div>
