src/render/snapshots/webgit__render__snapshot__tests__snapshot_html_no_url.snap
---
source: src/render/snapshot.rs
expression: "render(\"webgit-main.tar.gz\", 4096, 12, \"\")"
---
<div class="snapshot">
<p class="snapshot-info">webgit-main.tar.gz — 12 files, 4 KB</p>
<p class="msg error">This browser wouldn't hand over the file to download.</p>
</div>
