src/render/snapshots/webgit__render__snapshot__tests__snapshot_html_single_file.snap
---
source: src/render/snapshot.rs
expression: "render(\"webgit-main-src.tar.gz\", 12, 1, \"blob:fake\")"
---
<div class="snapshot">
<p class="snapshot-info">webgit-main-src.tar.gz — 1 file, 12 B</p>
<p class="msg">The download should have started. If it didn't, <a href="blob:fake" download="webgit-main-src.tar.gz" class="snapshot-download">save it here</a>.</p>
</div>
